@@ -24,6 +24,22 @@
     
     <build>
         <finalName>gms</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.3.v20140905</version>
+                <configuration>
+                    <jvmArgs>
+                        -server -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
+                    </jvmArgs>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
+                    <scanIntervalSeconds>5</scanIntervalSeconds>
+                </configuration>
+            </plugin>        
+        </plugins>
     </build>
     
     <dependencies>
